Fixed z-index of modals

--- a/src/components/modals/Modals.css
+++ b/src/components/modals/Modals.css
@@ -4,6 +4,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 20;
   background-color: #0000004d;
   display: flex;
   justify-content: center;
